[tool.poetry]
name = "windaq3"
version = "0.1.0"
description = "Small package to read windaq files in python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
